--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -63,7 +63,7 @@ ufmt-write = { version = "0.1.0", optional = true }
 # corresponding feature.
 esp32   = { version = "0.28.0", features = ["critical-section"], optional = true }
 esp32c2 = { version = "0.17.0", features = ["critical-section"], optional = true }
-esp32c3 = { version = "0.20.0", features = ["critical-section"], optional = true }
+esp32c3 = { path = "/projects/esp/esp-pacs/esp32c3", version = "0.20.0", features = ["critical-section"], optional = true }
 esp32c6 = { version = "0.11.0", features = ["critical-section"], optional = true }
 esp32h2 = { version = "0.7.0",  features = ["critical-section"], optional = true }
 esp32p4 = { git = "https://github.com/esp-rs/esp-pacs", rev = "c801d10", optional = true }
