--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,55 +45,67 @@ jobs:
   # Build Packages
 
   esp-hal:
+    name: esp-hal (${{ matrix.device.soc }})
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        soc: [
+        device: [
             # RISC-V devices:
-            "esp32c2",
-            "esp32c3",
-            "esp32c6",
-            "esp32h2",
-            "esp32p4",
+            { soc: "esp32c2", target: "riscv32imc-unknown-none-elf" },
+            { soc: "esp32c3", target: "riscv32imc-unknown-none-elf" },
+            { soc: "esp32c6", target: "riscv32imac-unknown-none-elf" },
+            { soc: "esp32h2", target: "riscv32imac-unknown-none-elf" },
+            { soc: "esp32p4", target: "riscv32imafc-unknown-none-elf" },
             # Xtensa devices:
-            "esp32",
-            "esp32s2",
-            "esp32s3",
+            { soc: "esp32", target: "xtensa-esp32-none-elf" },
+            { soc: "esp32s2", target: "xtensa-esp32s2-none-elf" },
+            { soc: "esp32s3", target: "xtensa-esp32s3-none-elf" },
           ]
 
     steps:
       - uses: actions/checkout@v4
 
       # Install the Rust toolchain for RISC-V devices:
-      - if: ${{ !contains(fromJson('["esp32", "esp32s2", "esp32s3"]'), matrix.soc) }}
+      - if: ${{ !contains(fromJson('["esp32", "esp32s2", "esp32s3"]'), matrix.device.soc) }}
         uses: dtolnay/rust-toolchain@v1
         with:
           target: riscv32imc-unknown-none-elf,riscv32imac-unknown-none-elf,riscv32imafc-unknown-none-elf
           toolchain: nightly
           components: rust-src
       # Install the Rust toolchain for Xtensa devices:
-      - if: contains(fromJson('["esp32", "esp32s2", "esp32s3"]'), matrix.soc)
+      - if: contains(fromJson('["esp32", "esp32s2", "esp32s3"]'), matrix.device.soc)
         uses: esp-rs/xtensa-toolchain@v1.5
         with:
-          buildtargets: ${{ matrix.soc }}
+          buildtargets: ${{ matrix.device.soc }}
           default: true
           ldproxy: false
 
       - uses: Swatinem/rust-cache@v2
 
       # Build all supported examples for the low-power core first (if present):
-      - if: contains(fromJson('["esp32c6", "esp32s2", "esp32s3"]'), matrix.soc)
+      - if: contains(fromJson('["esp32c6", "esp32s2", "esp32s3"]'), matrix.device.soc)
         name: Build prerequisites (esp-lp-hal)
-        run: cargo xtask build-examples esp-lp-hal ${{ matrix.soc }}
+        run: cargo xtask build-examples esp-lp-hal ${{ matrix.device.soc }}
 
+      # Make sure we're able to build the HAL without the default features
+      # enabled:
+      # TODO: Remove `rt` and `vectored` features when able!
+      #       See: https://github.com/esp-rs/esp-hal/issues/1371
+      - name: Build (no features)
+        run: |
+          cargo xtask build-package \
+            --no-default-features \
+            --features=${{ matrix.device.soc }},rt,vectored \
+            --target=${{ matrix.device.target }} \
+            esp-hal
       # Build all supported examples for the specified device:
-      - name: Build examples
-        run: cargo xtask build-examples esp-hal ${{ matrix.soc }}
+      - name: Build (examples)
+        run: cargo xtask build-examples esp-hal ${{ matrix.device.soc }}
       # Ensure we can build the documentation for the specified device:
-      - name: Build documentation
-        run: cargo xtask build-documentation esp-hal ${{ matrix.soc }}
+      - name: Build (documentation)
+        run: cargo xtask build-documentation esp-hal ${{ matrix.device.soc }}
 
   esp-lp-hal:
     runs-on: ubuntu-latest
