--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,13 +91,11 @@ jobs:
 
       # Make sure we're able to build the HAL without the default features
       # enabled:
-      # TODO: Remove `rt` and `vectored` features when able!
-      #       See: https://github.com/esp-rs/esp-hal/issues/1371
       - name: Build (no features)
         run: |
           cargo xtask build-package \
             --no-default-features \
-            --features=${{ matrix.device.soc }},rt,vectored \
+            --features=${{ matrix.device.soc }} \
             --target=${{ matrix.device.target }} \
             esp-hal
       # Build all supported examples for the specified device:
