--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -35,6 +35,7 @@ lis3dh-async        = "0.9.2"
 nb                  = "1.1.0"
 p192                = { version = "0.13.0", default-features = false, features = ["arithmetic"] }
 p256                = { version = "0.13.2", default-features = false, features = ["arithmetic"] }
+portable-atomic      = { version = "1.6.0", default-features = false }
 sha2                = { version = "0.10.8", default-features = false}
 smart-leds          = "0.4.0"
 ssd1306             = "0.8.4"
