--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -38,19 +38,19 @@ name    = "ecc"
 harness = false
 
 [dependencies]
-defmt              = { version = "0.3.6" }
-defmt-rtt          = { version = "0.4.0" }
+cfg-if = "1.0.0"
+critical-section   = "1.1.2"
+defmt              = "0.3.6"
+defmt-rtt          = "0.4.0"
+embassy-futures    = "0.1.1"
 embassy-time       = { version = "0.3.0", features = ["generic-queue-64"] }
-embassy-futures    = { version = "0.1" }
-embedded-hal       = { version = "1.0.0" }
+embedded-hal       = "1.0.0"
 embedded-hal-02    = { version = "0.2.7", package = "embedded-hal", features = ["unproven"] }
 embedded-hal-async = { version = "1.0.0", optional = true }
 embedded-hal-nb    = { version = "1.0.0", optional = true }
-esp-hal            = { path = "../esp-hal", features = ["defmt", "embedded-hal", "embedded-hal-02"], optional = true }
 esp-backtrace       = { version = "0.11.1", git = "https://github.com/esp-rs/esp-backtrace", rev = "edff83c3945e8aa11081d8467af65803a82434ba", default-features = false, features = ["exception-handler", "panic-handler", "defmt", "semihosting"] }
-critical-section   = { version = "1.1.2" }
-portable-atomic = "1"
-cfg-if = "1"
+esp-hal            = { path = "../esp-hal", features = ["defmt", "embedded-hal", "embedded-hal-02"], optional = true }
+portable-atomic = "1.6.0"
 
 [dev-dependencies]
 embassy-executor   = { version = "0.5.0", default-features = false, features = ["executor-thread", "arch-riscv32"] }
@@ -85,7 +85,6 @@ embassy-time-timg0         = ["esp-hal?/embassy-time-timg0"]
 
 # https://doc.rust-lang.org/cargo/reference/profiles.html#test
 # Test and bench profiles inherit from dev and release respectively.
-
 [profile.dev]
 codegen-units    = 1
 debug            = 2
