--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -38,7 +38,7 @@ name    = "ecc"
 harness = false
 
 [dependencies]
-cfg-if = "1.0.0"
+cfg-if             = "1.0.0"
 critical-section   = "1.1.2"
 defmt              = "0.3.6"
 defmt-rtt          = "0.4.0"
@@ -48,23 +48,23 @@ embedded-hal       = "1.0.0"
 embedded-hal-02    = { version = "0.2.7", package = "embedded-hal", features = ["unproven"] }
 embedded-hal-async = { version = "1.0.0", optional = true }
 embedded-hal-nb    = { version = "1.0.0", optional = true }
-esp-backtrace       = { version = "0.11.1", git = "https://github.com/esp-rs/esp-backtrace", rev = "edff83c3945e8aa11081d8467af65803a82434ba", default-features = false, features = ["exception-handler", "panic-handler", "defmt", "semihosting"] }
+esp-backtrace      = { version = "0.11.1", git = "https://github.com/esp-rs/esp-backtrace", rev = "edff83c3945e8aa11081d8467af65803a82434ba", default-features = false, features = ["exception-handler", "panic-handler", "defmt", "semihosting"] }
 esp-hal            = { path = "../esp-hal", features = ["defmt", "embedded-hal", "embedded-hal-02"], optional = true }
 portable-atomic = "1.6.0"
 
 [dev-dependencies]
-embassy-executor   = { version = "0.5.0", default-features = false, features = ["executor-thread", "arch-riscv32"] }
+crypto-bigint       = { version = "0.5.5", default-features = false }
+elliptic-curve      = { version = "0.13.8", default-features = false, features = ["sec1"] }
+embassy-executor    = { version = "0.5.0", default-features = false }
 # Add the `embedded-test/defmt` feature for more verbose testing
-embedded-test  = { git = "https://github.com/probe-rs/embedded-test", rev = "b67dec33992f5bd79d414a0e70220dc4142278cf", default-features = false }
-crypto-bigint  = { version = "0.5.5", default-features = false }
-nb             = "1.1.0"
-hex-literal    = "0.4.1"
-p192           = { version = "0.13.0", default-features = false, features = ["arithmetic"] }
-p256           = { version = "0.13.2", default-features = false, features = ["arithmetic"] }
-elliptic-curve = { version = "0.13.8", default-features = false, features = ["sec1"] }
+embedded-test       = { git = "https://github.com/probe-rs/embedded-test", rev = "1aa5a426d6b29ae2b509c5876dd33523b03e107c", default-features = false }
+hex-literal         = "0.4.1"
+nb                  = "1.1.0"
+p192                = { version = "0.13.0", default-features = false, features = ["arithmetic"] }
+p256                = { version = "0.13.2", default-features = false, features = ["arithmetic"] }
 
 [features]
-default = ["async", "embassy", "embassy-time-timg0"]
+default = ["async", "embassy", "embassy-time-timg0", "embassy-executor-thread"]
 
 # Device support (required!):
 esp32   = ["esp-hal/esp32", "esp-backtrace/esp32"]
@@ -76,7 +76,7 @@ esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2"]
 esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3"]
 # Async & Embassy:
 async                      = ["dep:embedded-hal-async", "esp-hal?/async"]
-embassy                    = ["esp-hal?/embassy", "embedded-test/embassy"]
+embassy                    = ["esp-hal?/embassy", "embedded-test/embassy", "embedded-test/external-executor"]
 embassy-executor-interrupt = ["esp-hal?/embassy-executor-interrupt"]
 embassy-executor-thread    = ["esp-hal?/embassy-executor-thread"]
 embassy-time-systick-16mhz = ["esp-hal?/embassy-time-systick-16mhz"]
