--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -57,6 +57,10 @@ harness = false
 name    = "get_time"
 harness = false
 
+[[test]]
+name    = "delay"
+harness = false
+
 [dependencies]
 cfg-if             = "1.0.0"
 critical-section   = "1.1.2"
