--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -13,6 +13,10 @@ name    = "aes_dma"
 harness = false
 
 [[test]]
+name    = "clock_monitor"
+harness = false
+
+[[test]]
 name    = "crc"
 harness = false
 
