--- a/hil-test/Cargo.toml
+++ b/hil-test/Cargo.toml
@@ -29,6 +29,10 @@ name    = "spi_full_duplex"
 harness = false
 
 [[test]]
+name    = "spi_full_duplex_dma"
+harness = false
+
+[[test]]
 name    = "rsa"
 harness = false
 
