--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -34,7 +34,7 @@ embedded-hal-nb      = { version = "1.0.0", optional = true }
 embedded-io          = { version = "0.6.1", optional = true }
 embedded-io-async    = { version = "0.6.1", optional = true }
 enumset              = "1.1.3"
-esp-synopsys-usb-otg = { version = "0.4.0", optional = true, features = ["fs", "esp32sx"] }
+esp-synopsys-usb-otg = { git = "https://github.com/esp-rs-compat/synopsys-usb-otg.git", rev = "b6d9238ad8bdcffaddfa00e99b0487c42805fdfa", version = "0.4.0", optional = true, features = ["fs", "esp32sx"] }
 fugit                = "0.3.7"
 log                  = { version = "0.4.21", optional = true }
 nb                   = "1.1.0"
