--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -23,6 +23,7 @@ defmt                = { version = "0.3.6", optional = true }
 document-features    = "0.2.8"
 embassy-executor     = { version = "0.5.0", optional = true }
 embassy-futures      = { version = "0.1.1", optional = true }
+atomic-waker         = { version = "1.1.2", optional = true, features = ["portable-atomic"] }
 embassy-sync         = { version = "0.5.0", optional = true }
 embassy-time-driver  = { version = "0.1.0", optional = true }
 embedded-can         = { version = "0.4.1", optional = true }
@@ -139,6 +140,7 @@ async = [
     "embassy-futures",
     "embedded-io",
     "embedded-io-async",
+    "atomic-waker"
 ]
 ## Implement `defmt::Format` on certain types.
 defmt = [
