--- a/esp-hal/Cargo.toml
+++ b/esp-hal/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name          = "esp-hal"
-version       = "0.16.1"
+version       = "0.17.0"
 edition       = "2021"
 rust-version  = "1.76.0"
 description   = "Bare-metal HAL for Espressif devices"
@@ -15,8 +15,8 @@ features       = ["embedded-hal", "esp32c6"]
 rustdoc-args   = ["--cfg", "docsrs"]
 
 [dependencies]
-bitflags             = "2.4.2"
-bitfield             = "0.14.0"
+bitflags             = "2.5.0"
+bitfield             = "0.15.0"
 cfg-if               = "1.0.0"
 critical-section     = "1.1.2"
 defmt                = { version = "0.3.6", optional = true }
@@ -40,9 +40,9 @@ log                  = { version = "0.4.21", optional = true }
 nb                   = "1.1.0"
 paste                = "1.0.14"
 portable-atomic      = { version = "1.6.0", default-features = false }
-procmacros           = { version = "0.9.0", features = ["enum-dispatch", "interrupt", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
+procmacros           = { version = "0.10.0", features = ["enum-dispatch", "interrupt", "ram"], package = "esp-hal-procmacros", path = "../esp-hal-procmacros" }
 riscv                = { version = "0.11.1", optional = true }
-strum                = { version = "0.26.1", default-features = false, features = ["derive"] }
+strum                = { version = "0.26.2", default-features = false, features = ["derive"] }
 void                 = { version = "1.0.2", default-features = false }
 usb-device           = { version = "0.3.2", optional = true }
 rand_core            = "0.6.4"
@@ -52,22 +52,22 @@ xtensa-lx            = { version = "0.9.0", optional = true }
 # IMPORTANT:
 # Each supported device MUST have its PAC included below along with a
 # corresponding feature.
-esp32   = { git = "https://github.com/esp-rs/esp-pacs", rev = "f6b5e6b", features = ["critical-section", "rt"], optional = true }
-esp32c2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "f6b5e6b", features = ["critical-section", "rt"], optional = true }
-esp32c3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "f6b5e6b", features = ["critical-section", "rt"], optional = true }
-esp32c6 = { git = "https://github.com/esp-rs/esp-pacs", rev = "f6b5e6b", features = ["critical-section", "rt"], optional = true }
-esp32h2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "f6b5e6b", features = ["critical-section", "rt"], optional = true }
-esp32s2 = { git = "https://github.com/esp-rs/esp-pacs", rev = "f6b5e6b", features = ["critical-section", "rt"], optional = true }
-esp32s3 = { git = "https://github.com/esp-rs/esp-pacs", rev = "f6b5e6b", features = ["critical-section", "rt"], optional = true }
+esp32   = { version = "0.30.0", features = ["critical-section", "rt"], optional = true }
+esp32c2 = { version = "0.19.0", features = ["critical-section", "rt"], optional = true }
+esp32c3 = { version = "0.22.0", features = ["critical-section", "rt"], optional = true }
+esp32c6 = { version = "0.13.0", features = ["critical-section", "rt"], optional = true }
+esp32h2 = { version = "0.9.0",  features = ["critical-section", "rt"], optional = true }
+esp32s2 = { version = "0.21.0", features = ["critical-section", "rt"], optional = true }
+esp32s3 = { version = "0.25.0", features = ["critical-section", "rt"], optional = true }
 
 [target.'cfg(target_arch = "riscv32")'.dependencies]
-esp-riscv-rt = { version = "0.7.0", path = "../esp-riscv-rt" }
+esp-riscv-rt = { version = "0.8.0", path = "../esp-riscv-rt" }
 
 [target.'cfg(target_arch = "xtensa")'.dependencies]
 xtensa-lx-rt = "0.16.0"
 
 [build-dependencies]
-basic-toml   = "0.1.8"
+basic-toml   = "0.1.9"
 cfg-if       = "1.0.0"
 esp-build    = { version = "0.1.0", path = "../esp-build" }
 esp-metadata = { version = "0.1.0", path = "../esp-metadata" }
