--- a/.github/workflows/hil.yml
+++ b/.github/workflows/hil.yml
@@ -36,6 +36,8 @@ jobs:
             runner: esp32h2-usb
             rust-target: riscv32imac-unknown-none-elf
           # Xtensa devices:
+          - soc: esp32s2
+            runner: esp32s2-jtag
           - soc: esp32s3
             runner: esp32s3-usb
     steps:
